# mercurius

./: Cargo.toml  README.md  readme.md
.cargo/: config.toml
src/: fdt.rs  io.rs  lib.rs  main.rs  memory.rs  serial.rs  util.rs
src/drivers/uart/: fu740_c000.rs  mod.rs  ns16550a.rs  uart.rs
src/memory/: frame.rs  mod.rs
